--- a/html/admin-panel.html
+++ b/html/admin-panel.html
@@ -30,22 +30,22 @@
                 </header>
                 <div id="main-admin-btns" class="tabs mb-4">
                     <button
-                        class="logs-btn px-6 py-3 bg-gray-200 text-gray-700
-                        font-medium rounded-t-lg ml-2 transition-all hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50">
+                        class="admin-btn logs-btn px-6 py-3 bg-gray-200 text-gray-700
+                        font-medium rounded-t-lg ml-2 transition-all hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50 active">
                         Логи пользователей
                     </button>
                     <button
-                        class="roles-btn px-6 py-3 bg-gray-200 text-gray-700
+                        class="admin-btn roles-btn px-6 py-3 bg-gray-200 text-gray-700
                         font-medium rounded-t-lg ml-2 transition-all hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50">
                         Выдача прав пользователям
                     </button>
                     <button
-                        class="reschedule-calendar-btn px-6 py-3 bg-gray-200 text-gray-700
+                        class="admin-btn reschedule-calendar-btn px-6 py-3 bg-gray-200 text-gray-700
                         font-medium rounded-t-lg ml-2 transition-all hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50">
                         Календарь переносов
                     </button>
                 </div>
-                <div id="logs-window" class="flex h-[calc(100vh-220px)] bg-white rounded-lg shadow-lg overflow-hidden">
+                <div id="logs-window" class="flex h-[calc(100vh-220px)] bg-white rounded-lg shadow-lg overflow-hidden"> 
                     <main class="w-[100%] p-6 overflow-y-auto">
                         <div class="flex justify-between items-center mb-6">
                             <h2 id="edit-title" class="text-2xl font-bold text-gray-800">Логи пользователей</h2>
@@ -69,5 +69,6 @@
             </div>
         </div>
         <script src="../js/date-filter.js" defer></script>
+        <script src="../js/admin-panel/admin-btns.js" defer></script>
     </body>
 </html>
