--- a/html/mainPage-improved.html
+++ b/html/mainPage-improved.html
@@ -59,7 +59,7 @@
                         <div class="user-btns">
                             <button onclick="window.location.href='admin-panel.html'"
                             class="px-4 py-2 bg-green-600 text-white hover:bg-red-600 transition-all focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-opacity-50 flex items-center gap-2"
-                        >
+                            style="display: none;">
                             <span>Панель управления</span>
                             </button>
                             <button
